# py-template

./: README.md  mkdocs.yml  pyproject.toml
py-template/: __init__.py
