[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.run]
command_line = "-m pytest"
source = ["py-template", "tests"]

[tool.isort]
profile = "black"
src_paths = ["py-template", "tests"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["**/*.py"]
namespace_packages = true
show_error_codes = true

[tool.poetry]
name = "py-template"
version = "0.1.0"
description = "Template repository for Python projects"
authors = ["Scissor Tail <vittring@protonmail.com>"]
license = "MIT"
homepage = "https://github.com/vittring/py-template"
readme = "README.md"
include = ["py-template/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = ">=22.3.0"
coverage = {version = "^6", extras = ["toml"]}
flake8 = ">=4"
isort = "^5.6"
mkdocs-material = "^8"
mypy = ">0.900,<1"
pre-commit = "^2.8"
pytest = "^7"
pytest-cov = "^3"
pytest-mock = "^3.3"

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
