[tool.poetry]
name = "py-template"
version = "0.1.0"
description = "Template repository for Python projects"
authors = ["Architect <scissortail@riseup.net>"]
license = "GPL-3.0-only"
homepage = "https://github.com/vittring/py-template"
readme = "README.md"
include = ["py-template/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = ">=22.3.0"
coverage = {version = "^6", extras = ["toml"]}
flake8 = ">=4"
isort = "^5.6"
mkdocs-material = "^8"
mypy = ">0.900,<1"
pre-commit = "^2.8"
pytest = "^7"
pytest-cov = "^3"
pytest-mock = "^3.3"

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
